# obsidian-transcript-pipeline

./: .gitignore  README.md  config.toml  pyproject.toml  spec.md
benchmark/: Dockerfile.arm  benchmark_arm.py  run_benchmark.sh
scripts/: register_speaker.py  run_pipeline.py  test_webhook.py
server/: index.js  package-lock.json  package.json
src/: config.py  hallucination_filter.py  limitless_poller.py  llm.py  markdown_writer.py  pipeline.py  server.py  speaker_id.py  speaker_registry.py  stt.py  vad.py
