[project]
name = "transcripts-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "torchaudio>=2.6",
    "transformers>=4.52",
    "speechbrain>=1.0",
    "numpy>=2.0",
    "soundfile>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
